优化入口文件逻辑、参数命令自动注册、公共文件添加版号

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "lks",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "批量创建符号链接，工具包",
   "main": "index.js",
   "scripts": {},
   "keywords": [],
   "author": "animator70@outlook.com",
   "license": "MulanPSL2",
+  "type": "commonjs",
   "devDependencies": {
     "@types/cli-progress": "^3.11.6",
     "@types/node": "^18.19.120"
