--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
   },
   "repository": {
     "url": "https://gitee.com/nextall/lks",
-    "type": "gitee"
+    "type": "Gitee"
   },
   "repositorys": [
     {
       "url": "https://gitee.com/nextall/lks",
-      "type": "gitee"
+      "type": "Gitee"
+    },
+    {
+      "url": "https://github.com/thisNames/lks",
+      "type": "Github"
     },
     {
       "url": "2226531799@qq.com",
-      "type": "email"
+      "type": "Email"
     }
   ],
   "dependencies": {
