重构 package.json 仓库字段名称为 listRepository，优化版本和仓库信息打印逻辑，增加错误处理

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://gitee.com/nextall/lks",
     "type": "Gitee"
   },
-  "repositorys": [
+  "listRepository": [
     {
       "url": "https://gitee.com/nextall/lks",
       "type": "Gitee"
